// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logo renders logo from export 1`] = `
"<div class='logo'><a class=\\"home-link\\" href=\\"https://yandex.ru\\" target=\\"_blank\\" rel=\\"noopener\\" data-statlog=\\"logo.default\\"><div class='logo__image_no_bg'><img  src=\\"//yastatic.net/s3/home/logos/turkey_logos/pobeda.png\\"  style=\\"margin-top:-8px;\\" title=\\"С Днём Победы!\\" role=\\"img\\" aria-label=\\"Яндекс\\"><script  >(function () {
    /* currentScript не работает в ие */
    var script = document.currentScript;
    if (!script) {
        script = document.getElementsByTagName('script');
        script = script[script.length - 1];
    }
    var img = script.previousSibling;
    while (img && img.tagName !== 'IMG') {
        img = img.previousSibling;
    }
    function onerror () {
        var parent = img.parentNode;
        parent.className = 'logo__image_bg';
        parent.removeChild(img);
    }
    if (img) {
        /* Нельзя проверять height,
         * т.к. в ие он будет равен height из css.
         * complete и naturalHeight есть не во всех браузерах
         */
        if (img.complete && img.naturalHeight === 0) {
            onerror();
        } else {
            /* оптимистично надеемся, что картинка не успела загрузиться */
            img.onerror = onerror;
        }
    }
}());</script></div></a></div>"
`;

exports[`logo renders logo from export with link and stat 1`] = `
"<div class='logo'><a target=\\"_blank\\" class=\\"home-link logo__link\\" href=\\"http://yandex.ru/yandsearch?text=%D0%94%D0%B5%D0%BD%D1%8C+%D0%9F%D0%BE%D0%B1%D0%B5%D0%B4%D1%8B\\" rel=\\"noopener\\" data-statlog=\\"123\\"><div class='logo__image_no_bg'><img  src=\\"//yastatic.net/s3/home/logos/turkey_logos/pobeda.png\\"  style=\\"margin-top:-8px;margin-left:10px;width:100px;height:100px;\\" title=\\"С Днём Победы!\\" role=\\"img\\" aria-label=\\"Яндекс\\"><script  >(function () {
    /* currentScript не работает в ие */
    var script = document.currentScript;
    if (!script) {
        script = document.getElementsByTagName('script');
        script = script[script.length - 1];
    }
    var img = script.previousSibling;
    while (img && img.tagName !== 'IMG') {
        img = img.previousSibling;
    }
    function onerror () {
        var parent = img.parentNode;
        parent.className = 'logo__image_bg';
        parent.removeChild(img);
    }
    if (img) {
        /* Нельзя проверять height,
         * т.к. в ие он будет равен height из css.
         * complete и naturalHeight есть не во всех браузерах
         */
        if (img.complete && img.naturalHeight === 0) {
            onerror();
        } else {
            /* оптимистично надеемся, что картинка не успела загрузиться */
            img.onerror = onerror;
        }
    }
}());</script></div></a></div>"
`;

exports[`logo renders simple logo 1`] = `"<div class='logo'><a class=\\"home-link\\" href=\\"https://yandex.ru\\" target=\\"_blank\\" rel=\\"noopener\\" data-statlog=\\"logo.default\\"><div  class=\\"logo__image_bg\\"  role=\\"img\\" aria-label=\\"Яндекс\\"></div></a></div>"`;
